--- a/credentials.yml
+++ b/credentials.yml
@@ -12,9 +12,9 @@ rest:
 #  secret: "<your secret>"
 #  page-access-token: "<your page access token>"
 
-#slack:
-#  slack_token: "<your slack token>"
-#  slack_channel: "<the slack channel>"
+slack:
+  slack_token: "xoxb-1123355240483-1150024408592-Un0gjV2Hz6kG0wsgc79ViEvv"
+  slack_channel: ""
 
 #socketio:
 #  user_message_evt: <event name for user message>
